--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "easy-graphite-metrics",
+  "name": "machz-metrics",
   "version": "0.0.1",
   "description": "A out-of-box graphite metric util.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha *.spec.js"
   },
   "keywords": [
     "graphite",
@@ -17,5 +17,9 @@
   "license": "MIT",
   "dependencies": {
     "graphite-tcp": "^1.0.4"
+  },
+  "devDependencies": {
+    "mocha": "^4.0.1",
+    "nock": "^9.0.25"
   }
 }
